# IOT-createQRscan

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  oneshot_read_main.c
